--- a/style.css
+++ b/style.css
@@ -1,6 +1,70 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+.labots-attels{
+    width: 500px;
+    height: auto;
 }
+
+.pogu-conteiner{
+    text-align: center;
+}
+
+ h1{
+text-align: center;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+p, h3, h5{
+    font-family: 'Times New Roman', Times, serif;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+.section {
+    height: 100vh;
+    padding: 20px;
+}
+
+.scroll-down-btn {
+    cursor: pointer;
+    background-color:yellow;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 10px;
+
+}
+    
+    .section1 {
+        text-align: center;
+        background-color: black;
+        color:white; 
+        padding: 20px; 
+      }
+  
+      
+      .section2 {
+        text-align: center;
+        background-color: yellow; 
+        color:black; 
+        padding: 20px; 
+      }
+
+      .section3 {
+        text-align: center;
+        background-color: black;
+        color:white; 
+        padding: 20px; 
+      }
+
+      .section4 {
+        text-align: center;
+        background-color: yellow; 
+        color:black; 
+        padding: 20px; 
+      }
+      
+
+
